PRMP-1348 - fix back link spacing

--- a/app/src/styles/App.scss
+++ b/app/src/styles/App.scss
@@ -685,6 +685,12 @@ $hunit: '%';
     }
 }
 
+// override
+.nhsuk-back-link {
+    margin-top: nhsuk-spacing(0);
+    margin-bottom: nhsuk-spacing(3);
+}
+
 // Generic
 .pdfobject-container:focus {
     border: 2px solid #212b32;
